Changed product list to show image and updated product form

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -1,6 +1,6 @@
 {
   "global": {
-    "title": "Ollen",
+    "title": "Øllen",
     "browsehappy": "You are using an <strong>outdated</strong> browser. Please <a href=\"http://browsehappy.com/?locale=en\">upgrade your browser</a> to improve your experience.",
     "menu": {
       "home": "Home",
@@ -8,9 +8,9 @@
       "entities": {
         "main": "Entities",
         "address": "Address",
-        "product": "Product",
+        "product": "Products",
         "review": "Review",
-        "order": "Order",
+        "order": "Orders",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
